logs/offboard_pkg/build.make.235.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘void MultiBody::Init_lla_circle(double, Eigen::Vector3d&)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:220:13: error: ‘ned’ was not declared in this scope
  220 |             ned = uav[i].get_ned(theta_d, yaw_d, R);
      |             ^~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:221:44: error: ‘lla’ was not declared in this scope
  221 |             uav[i].ned2lla(ned, lla_lead0, lla);
      |                                            ^~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:195:6: error: no declaration matches ‘bool TaskManager::is_GPS_circle_succuss(Eigen::Vector3d&)’
  195 | bool TaskManager::is_GPS_circle_succuss(Eigen::Vector3d &pos)
      |      ^~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:195:6: note: no functions named ‘bool TaskManager::is_GPS_circle_succuss(Eigen::Vector3d&)’
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:15:7: note: ‘class TaskManager’ defined here
   15 | class TaskManager
      |       ^~~~~~~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:76: CMakeFiles/offboard_pkg_node.dir/src/TaskManager.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
